[package]
name = "kyoto_benchmark"
version = "0.1.0"
authors = ["jiachenbai"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kyoto-benchmark"
path = "src/main/kyoto_benchmark.rs"

[dependencies]
bytes = "1.0"
futures = "0.3.13"
rand = "0.8.3"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"